<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tvshow"
            android:icon="@drawable/ic_tv_black_24dp"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/nav_celeb"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/celeb" />

        <item
            android:id="@+id/nav_watch_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/watch_list" />
    </group>

</menu>
