<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="235dp"
    android:background="@color/colorStatusBar"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="44dp">

    <TextView
        android:id="@+id/tv_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/no_internet"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:padding="8dp"/>


    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv_internet"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/btn_network_settings"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_confirm"
        android:layout_marginLeft="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/btn_cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="16dp"/>


</RelativeLayout>