<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hoang.mobies.fragments.MoviesFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_trending"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp" />

            <HorizontalScrollView
                android:id="@+id/tl_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vp_trending">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tl_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.design.widget.TabLayout>

            </HorizontalScrollView>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movies_by_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tl_container"
                android:padding="10dp">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_coming_soon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_movies_by_categories"
                android:text="@string/coming_soon"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_coming_soon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_coming_soon"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_in_cinemas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_coming_soon"
                android:text="@string/in_cinemas"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_in_cinemas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_in_cinemas"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_in_cinemas"
                android:text="@string/top_rated"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_rated"
                android:padding="10dp" />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>
