<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.hoang.mobies.fragments.MoviesFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tv_no_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                android:text="No Connection"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_trending"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp" />

            <!--<HorizontalScrollView-->
            <!--android:id="@+id/tl_container"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/vp_trending"-->
            <!--android:scrollbars="none">-->

            <!--<android.support.design.widget.TabLayout-->
            <!--android:id="@+id/tl_category"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:tabIndicatorHeight="0dp"-->
            <!--app:tabSelectedTextColor="@color/colorTextPrimary"-->
            <!--app:tabTextColor="@color/colorTextSecondary"></android.support.design.widget.TabLayout>-->

            <!--</HorizontalScrollView>-->

            <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/rv_tvshows_airing_today"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/vp_trending"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginTop="10dp">-->

            <!--</android.support.v7.widget.RecyclerView>-->

            <TextView
                android:id="@+id/tv_airing_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vp_trending"
                android:layout_marginLeft="10dp"
                android:text="@string/airing_today"
                android:visibility="gone"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_airing_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_airing_today"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_airing_today"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/top_rated"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_rated"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_on_air"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_top_rated"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/on_air"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_on_air"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_on_air"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>
